fix: not found page and header visibility

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -649,8 +649,9 @@ a {
   align-items: center;
   justify-content: center; 
   gap: 1rem;
+  margin: auto;
   width: 100%;
-  height: 70vh; 
+  height: 85vh; 
   padding: 1rem;
   box-sizing: border-box;
 }
